<resources>
    <string name="app_name">Menu Helper</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-2575502817890974~6303331890</string>

    <!--This is the actual unit id-->
    <string name="admob_banner_unit_id" translatable="false">ca-app-pub-2575502817890974/8118992350</string>

    <!--this is the actual id for interstitial ads-->
    <string name="admob_interstitial_id" translatable="false">ca-app-pub-2575502817890974/9283465402</string>

    <!--this is the actual id for grocery interstitial ads-->
    <string name="admob_grocery_interstitial" translatable="false">ca-app-pub-2575502817890974/2612694394</string>


    <!--TEST ID-->
    <!--this is the test id for grocery interstitial-->
    <!--<string name="admob_grocery_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->

    <!--this is the test id for interstitial ads-->
    <!--<string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>-->

    <!--this is the test id-->
    <!--<string name="admob_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->


    <string name="ingredient_header">INGREDIENTS</string>
    <string name="new_recipe_name_box">Recipe Name</string>
    <string name="add_ingredient_btn">Add Ingredient</string>
    <string name="directions_hint">Directions</string>
    <string name="recipe_list_to_json" translatable="false">MyCookBook</string>
    <string name="json_menu_list" translatable="false">menuListToJSON</string>
    <string name="json_grocery_list" translatable="false">groceryListToJSON</string>
    <string name="name">Name</string>
    <string name="ingredient_name">Item Name</string>
    <string name="amount">Amount</string>
    <string name="recipe_list_activity_title">My Recipes</string>
    <string name="remove_selected_items">Remove Selected Items</string>
    <string name="add_item">Add Item</string>
    <string name="filter_button">Filter</string>
    <string name="no_img_selected" translatable="false">default_recipe</string>
    <string name="existing">Existing</string>
    <string name="new_photo_title">New Photo</string>
    <string name="new_photo_message">Take a new photo or add an existing photo from the gallery?</string>
    <string name="cancel">Cancel</string>
    <string name="take_new_photo">Take Photo</string>
    <string name="new_grocery_list">New Grocery List</string>
    <string name="add_recipes">Add Recipes</string>
    <string name="submit">Submit</string>
    <string name="remove_recipes">Remove Recipes</string>
    <string name="at_least_one_ingredient">Please enter at least one ingredient</string>
    <string name="share">Share</string>
    <string name="menu_activity_name">My Menu</string>
    <string name="add_ingredient_dialog_title">Add Ingredient</string>
    <string name="category">CATEGORY: </string>
    <string name="recipe_item_image_description">A recipe photo</string>
    <string name="export">Export Cookbook</string>
    <string name="import_cookbook">Import Recipes</string>
    <string name="no_grocery_to_share">No Groceries to Share</string>
    <string name="add_to_menu">Add To Menu</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="select_all">Select All</string>
    <string name="selected_recipes">My Recipes</string>
    <string name="is_preloaded" translatable="false">isPreloaded</string>
    <string name="ok" translatable="false">OK</string>
    <string name="are_you_sure_change">Are you sure you want to make changes to</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="save_recipe_question">Save Recipe?</string>
    <string name="null_recipe_received">Null recipe received</string>
    <string name="items_removed">Items Removed</string>
    <string name="no_grocery_list_found">No Grocery List Found</string>
    <string name="enter_name_amount">Please enter a name and amount</string>
    <string name="grocery_list">Grocery List</string>
    <string name="no_menu_items">No Menu Items</string>
    <string name="no_recipes_in_cookbook">No Recipes in the Cookbook</string>
    <string name="select_recipes_to_share">Please select recipes to share</string>
    <string name="no_recipes_selected">No Recipes Selected</string>
    <string name="removed">Removed</string>
    <string name="permanently_delete">The recipes will be deleted permanently!</string>
    <string name="delete_complete">Delete Recipes Completely?</string>
    <string name="no_recipes_found">No Recipes Found</string>
    <string name="my_recipes">My Recipes</string>
    <string name="delete">Delete</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="please_add_menu_items">Please add menu items</string>
    <string name="are_you_sure_replace_glist">Are you sure you want to replace your existing grocery list?</string>
    <string name="new_glist_question">Generate New Grocery List?</string>
    <string name="select_a_cookbook_file">Select a cookbook file...</string>
    <string name="invalid_file">Invalid File</string>
    <string name="import_cookbook_question">Import a Cookbook?</string>
    <string name="append_cookbook_question">Are you sure you want to append your cookbook?</string>
    <string name="grocery_item_added">%s added successfully.</string>

    <!--Help dialogs-->

    <string name="recipe_list_help">Hold: open recipe Select: recipes to share or remove Floating Button(arrow): add selected recipes to menu</string>
    <string name="menu_list_help">Hold: remove recipe from menu Select: open recipe Floating Button(+): add recipes to menu</string>
    <string name="grocery_list_help">Select: items to remove Floating Button(+): add grocery item</string>
    <string name="edit_recipe_help">Touch image: to add image Must Submit to save any changes</string>
    <string name="add_recipe_help">Touch image: to add image Must Submit to save recipe</string>
    <string name="help">Help</string>
    <string name="remove_all">Remove All</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="remove_all_from_menu">Remove all recipes from your menu?</string>
    <string name="recipes_removed">Recipes removed</string>
    <string name="no">NO</string>
    <string name="edit_image_desc">Edit Image</string>
    <string name="continue_question">Continue?</string>
    <string name="wish_to_continue">No menu items found, do wish to continue?</string>
    <string name="yes">Yes</string>
    <string name="replace_grocery_title">Replace Existing Grocery List?</string>
    <string name="replace_grocery_message">Replace your existing grocery list with an empty list?</string>
    <string name="append_grocery_list">Append Grocery List</string>
    <string name="remove_from_menu">Remove from menu?</string>
    <string name="are_you_sure_remove_format">Are you sure you want to remove %s?</string>
    <string name="format_recipe_removed">%s removed</string>


    <string name="recipe_detail_image_description">An image of this recipe. It looks tasty!</string>
    <string name="category_textview">"CATEGORY: "</string>
    <string name="directions_heading">DIRECTIONS</string>
    <string name="whats_for_dinner">What\'s for dinner tonight?</string>
    <string name="almost_dinner_time">Almost Dinner Time</string>

</resources>
