<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addRecipesMenuItem"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add_recipes"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/importCookbook"
        android:icon="@drawable/ic_file_download_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/import_cookbook"
        />
    <item
        android:id="@+id/exportCookbook"
        android:title="@string/export"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/removeRecipes"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/remove_recipes"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never"/>
</menu>